# wf-panel-pi-kbdlayout

./: README.md  meson.build
src/widgets/: meson.build
src/widgets/kbdlayout/: kbdlayout.cpp  kbdlayout.hpp  kbdlayout.xml  meson.build
